--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="@dimen/activity_vertical_margin"
-    tools:context="com.youtube.sorcjc.proyectoprofesionales.ui.SettingsActivity">
+    tools:context=".ui.settings.SettingsActivity">
 
     <TextView
         android:id="@+id/tvUpdateUserData"
