--- a/app/src/main/res/layout/activity_update_user.xml
+++ b/app/src/main/res/layout/activity_update_user.xml
@@ -138,7 +138,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:inputType="textNoSuggestions" />
+            android:text="123456"
+            android:inputType="textPassword" />
 
         <ImageButton
             android:id="@+id/ibPassword"
